# expr-evaluator

./: CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake-single-platform.yml
Google_tests/: CMakeLists.txt  test_addition.cpp  test_hello_world.cpp  test_input_manager.cpp  test_substraction.cpp
expr_evaluator_lib/: CMakeLists.txt  hello.h  input_manager.c  input_manager.h
expr_evaluator_lib/model/: string_length.h
expr_evaluator_lib/model/error/: exception.h
expr_evaluator_lib/service/: input_manager.c  input_manager.h
